--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
                        </div>
                        <div class="content">
                            <div class="textBox">
-                               <p>Le code c'est bien</p>
+                               <p>Je suis animé par de nombreuses passions dont les nouvelles technologies. Spécialisé dans le développement front-end, je me caractérise par ma polyvalence. Fort de mon expérience dans la Communication, le Design et le Print, j’ai de nombreux atouts pour satisfaire les besoins d’une entreprise et de mener à bien ses projets.
+                                <br><br>
+                                Durant mon parcours, j’ai appris à maîtriser différents langages : HTML5, CSS3 ainsi que Javascript (JQuery, Vue.js).
+                                <br><br>
+                                Je suis également expérimenté sur la suite Adobe (InDesign, Photoshop, Illustrator) et peux donc vous proposer vos maquettes graphiques pour le Web et le Print.</p>
                            </div>
                            <div class="imgBx">
                                <img src="img/bg1.jpg">
@@ -89,11 +93,13 @@
                                 <h2>Montage Vidéo</h2>
                                 <p>Le montage vidéo est en premier lieu une passion pour moi, les outils (logiciels) et ma créativité me permettent de réaliser des clips qualitatifs et dynamiques pour mettre en avant un produit, une marque ou un évènement.</p>
                             </div>
+                            <!--
                             <div class="serviceBox">
                                 <img src="img/icon5.png">
                                 <h2>Rédactionnel (FR)</h2>
                                 <p>Le Français est un sujet vaste et complexe, je propose également mes services pour rédiger des articles pour mettre en avant votre image.</p>
                             </div>
+                            -->
                             <div class="serviceBox">
                                 <img src="img/icon6.png">
                                 <h2>Référencement</h2>
@@ -111,12 +117,15 @@
                         <div class="content">
                             <div class="workBx">
                                 <div class="imgBx">
-                                    <img src="img/img1.jpg">
+                                    <img src="img/projets/projet1.png">
                                 </div>
                                 <div class="textBx">
-                                    <h3>Projet 1</h3>
+                                    <h3>tinymancelle.fr</h3>
+                                    <p>Site vitrine pour un constructeur de Tiny House.<br>Code HTML5, CSS3 et Javascript. Animations CSS. Bannière ludique.</p>
+                                    <div class="visite"><a href="https://tinymancelle.fr/" target="_blank">VISITE</a></div>
                                 </div>
                             </div>
+                            <!--
                             <div class="workBx">
                                 <div class="imgBx">
                                     <img src="img/img2.jpg">
@@ -156,7 +165,7 @@
                                 <div class="textBx">
                                     <h3>Projet 6</h3>
                                 </div>
-                            </div> 
+                            </div>
                             <div class="workBx">
                                 <div class="imgBx">
                                     <img src="img/img7.jpg">
@@ -181,6 +190,7 @@
                                     <h3>Projet 9</h3>
                                 </div>
                             </div>
+                            -->
                         </div>
                     </section>
 
@@ -195,9 +205,10 @@
                                 <div class="imgBx">
                                     <img src="img/user1.jpg">
                                 </div>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quia accusantium! Enim laudantium, tempore voluptatem optio adipisci, temporibus eum error dolorem velit ipsum labore recusandae aliquid impedit. Reiciendis, harum eligendi.</p>
+                                <p>Kevin a su me proposer rapidement des maquettes au design classe et épuré pour mettre en avant mon activité. Le site web est dynamique et permet de trouver facilement les infos, j’ai de très bons retours. J’ai été très bien conseillé sur le plan marketing afin que le site m’aide à développer mon portefeuille client. Je suis pleinement satisfait des solutions et du travail qu’il a effectué. Je le recommande les yeux fermés!</p>
                                 <h4>Sébastien LEPARC<br><span>La Tiny Mancelle</span></h4>
                             </div>
+                            <!--
                             <div class="testimonialsBox">
                                 <div class="imgBx">
                                     <img src="img/user2.jpg">
@@ -219,6 +230,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quia accusantium! Enim laudantium, tempore voluptatem optio adipisci, temporibus eum error dolorem velit ipsum labore recusandae aliquid impedit. Reiciendis, harum eligendi.</p>
                                 <h4>Someone Famouse<br><span>Website Designer</span></h4>
                             </div>
+                            -->
                         </div>
                     </section>
 
@@ -230,12 +242,12 @@
                         </div>
                         <div class="contactForm">
                             <div class="row">
-                                <input type="text" name="" placeholder="First Name">
-                                <input type="text" name="" placeholder="Last Name">
+                                <input type="text" name="" placeholder="Prénom">
+                                <input type="text" name="" placeholder="Nom">
                             </div>
                             <div class="row">
-                                <input type="text" name="" placeholder="Email">
-                                <input type="text" name="" placeholder="Mobile No.">
+                                <input type="text" name="" placeholder="E-mail">
+                                <input type="text" name="" placeholder="Téléphone">
                             </div>
                             <div class="row2">
                                 <textarea placeholder="Message"></textarea>
