--- a/index.html
+++ b/index.html
@@ -240,22 +240,24 @@
                             <h2>Contactez-moi !</h2>
                             <p>Pour un projet, un devis, des conseils...</p>
                         </div>
-                        <div class="contactForm">
-                            <div class="row">
-                                <input type="text" name="" placeholder="Prénom">
-                                <input type="text" name="" placeholder="Nom">
+                        <form action="/kevinsimon.pro@gmail.com" method="post">
+                            <div class="contactForm">
+                                <div class="row">
+                                    <input type="text" name="" placeholder="Prénom">
+                                    <input type="text" name="" placeholder="Nom">
+                                </div>
+                                <div class="row">
+                                    <input type="text" name="" placeholder="E-mail">
+                                    <input type="text" name="" placeholder="Téléphone">
+                                </div>
+                                <div class="row2">
+                                    <textarea placeholder="Message"></textarea>
+                                </div>
+                                <div class="row2">
+                                    <input type="submit" value="Send">
+                                </div>
                             </div>
-                            <div class="row">
-                                <input type="text" name="" placeholder="E-mail">
-                                <input type="text" name="" placeholder="Téléphone">
-                            </div>
-                            <div class="row2">
-                                <textarea placeholder="Message"></textarea>
-                            </div>
-                            <div class="row2">
-                                <input type="submit" value="Send">
-                            </div>
-                        </div>
+                        </form>
                      </section>
 
                      <!-- COPYRIGHT -->
