--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
         </head>
 
         <body>
-            <a href="../index.html" class="mainWebsite"><i class="fa fa-arrow-left" aria-hidden="true"></i> Retour</a>
+            <a href="index.html" class="mainWebsite"><i class="fa fa-arrow-left" aria-hidden="true"></i> Retour</a>
              
             <div class="container">
                 <div class="left_Side">
