--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                            </div>
                            <h3>Kevin SIMON</h3>
                            <p>Communication / Création / Print & Web</p>
-                           <a href="cv.html" class="btn">Téléchargez mon CV</a>
+                           <a class="btn" href="cv.html">Téléchargez mon CV</a>
                            <ul class="socialMedia">
                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
