--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,10 @@
         </head>
 
         <body>
-            <a href="index.html" class="mainWebsite"><i class="fa fa-arrow-left" aria-hidden="true"></i> Retour</a>
+            <div class="nav_CV">
+                <a href="index.html" class="mainWebsite"><i class="fa fa-arrow-left" aria-hidden="true"></i> Retour</a>
+                <a href="DDL/CV_KevinSIMON.png" target="_blank" class="mainWebsite"><i class="fa fa-file-text-o" aria-hidden="true"></i> Téléchargez mon CV</a>
+            </div>
              
             <div class="container">
                 <div class="left_Side">
