--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 
         <body class="body_CV">
             <div class="nav_CV">
-                <a href="https://lemkin.github.io/Portfolio_KevinSIMON/" class="mainWebsite"><i class="fa fa-arrow-left" aria-hidden="true"></i> Retour</a>
+                <a href="index.html" class="mainWebsite"><i class="fa fa-arrow-left" aria-hidden="true"></i> Retour</a>
                 <a href="DDL/CV_KevinSIMON.png" target="_blank" class="mainWebsite"><i class="fa fa-file-text-o" aria-hidden="true"></i> Téléchargez mon CV</a>
             </div>
              
